Add fixture cookbook to ensure net-tools are on RHEL/Fedora boxes. Make sure sox is installed.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,8 +9,11 @@ provisioner:
 
 platforms:
   - name: centos-6.5
+    run_list: asterisk-test
   - name: fedora-19
+    run_list: asterisk-test
   - name: fedora-20
+    run_list: asterisk-test
   - name: ubuntu-12.04
     run_list: apt::default
   - name: ubuntu-10.04
